--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "dayjs": "^1.10.4"
     },
     "devDependencies": {
-        "@weweb/cli": "github:weweb-team/weweb-cli#webapp"
+        "@weweb/cli": "latest"
     },
     "license": "MIT"
 }
